[package]
name = "bpf_loader"
version = "0.1.0"
authors = ["Robert Beekman <robertbeekman@matsimitsu.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redbpf = { version = "1.3.0", features = ["load"] }
bpf_probe = { path = "../bpf_probe" }
futures = "0.3"
tokio = { version = "0.3.6", features = ["time", "rt-multi-thread", "macros", "signal"] }
